--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,20 @@
 body {
   font-family: "Montserrat", sans-serif;
+  margin: 0;
 }
 
 .container {
   max-width: 1400px;
+  margin: 0 auto;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+}
+
+section {
+  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -54,7 +65,49 @@ header a {
   display: inline-block;
 }
 
-@media (max-width: 900px) {
+footer {
+  background-image: linear-gradient(
+      rgba(39, 32, 68, 0.8),
+      rgba(39, 32, 68, 0.8)
+    ),
+    url(../images/sundownbackgroundgreenland.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  padding: 100px 0;
+}
+
+footer h3 {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.5;
+}
+
+footer p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  margin-right: 20px;
+  opacity: 0.7;
+}
+
+footer ul {
+  padding: 0;
+}
+
+footer li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  opacity: 0.7;
+  line-height: 1.5;
+}
+
+footer a {
+  color: white;
+}
+
+@media (max-width: 960px) {
   header {
     padding: 60px 0;
   }
