--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@ body {
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
+  gap: 50px;
 }
 
 section {
@@ -87,7 +88,6 @@ footer p {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
-  margin-right: 20px;
   opacity: 0.7;
 }
 
