Added Google maps embed and removed some images

--- a/src/style.css
+++ b/src/style.css
@@ -31,9 +31,18 @@ body {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
+.embed {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+}
+
 .card {
   background-color: white;
   margin: 30px 0;
+}
+
+.card-header.grid {
+  gap: 0;
 }
 
 .card-body {
@@ -160,7 +169,7 @@ main p {
 }
 
 .responsive-image {
-  max-width: 100%;
+  width: 100%;
 }
 
 footer {
@@ -231,5 +240,13 @@ footer a {
 
   section {
     padding: 30px;
+  }
+
+  .card-header img {
+    display: none;
+  }
+
+  .embed {
+    aspect-ratio: 16 / 9;
   }
 }
